(library
 (name        kraken)
 (public_name kraken)
 (modules kraken)
 (preprocess (pps ppx_sexp_conv))
 (libraries hex ptime uri ezjsonm ocplib-json-typed))

(library
 (name        kraken_rest)
 (public_name kraken-rest)
 (modules kraken_rest)
 (preprocess (pps ppx_sexp_conv))
 (libraries
  base64
  digestif.c
  kraken
  ptime
  uri
  logs-async
  conduit-async
  httpaf
  httpaf-async
  ocplib-json-typed))

(library
 (name        kraken_ws)
 (public_name kraken-ws)
 (modules kraken_ws)
 (preprocess (pps ppx_sexp_conv))
 (libraries kraken ptime uri ocplib-json-typed))

(library
 (name        kraken_ws_async)
 (public_name kraken-ws-async)
 (modules kraken_ws_async)
 (preprocess (pps ppx_sexp_conv))
 (libraries ezjsonm kraken_ws core async fastws-async))
