(library
 (name        kraken)
 (public_name kraken)
 (modules kraken)
 (preprocess (pps ppx_sexp_conv))
 (libraries
   ocplib-endian
   fmt
   uuidm
   fixtypes
   ptime
   uri
   ezjsonm
   ocplib-json-typed))

(library
 (name        kraken_rest)
 (public_name kraken-rest)
 (modules kraken_rest)
 (preprocess (pps ppx_sexp_conv))
 (libraries
  core
  base64
  digestif.c
  kraken
  ptime
  uri
  ocplib-json-typed
  fastrest))

(library
 (name        kraken_ws)
 (public_name kraken-ws)
 (modules kraken_ws)
 (preprocess (pps ppx_sexp_conv))
 (libraries fixtypes kraken ptime uri ocplib-json-typed))

(library
 (name        kraken_ws_async)
 (public_name kraken-ws-async)
 (modules kraken_ws_async)
 (preprocess (pps ppx_sexp_conv))
 (libraries uri-sexp ezjsonm kraken_ws core async fastws-async))
