(library
 (name        kraken)
 (public_name kraken)
 (modules kraken)
 (preprocess (pps ppx_sexp_conv))
 (libraries
   sexplib
   ocplib-endian
   uuidm
   fixtypes
   ptime
   ocplib-json-typed))

(library
 (name        kraken_rest)
 (public_name kraken-rest)
 (modules kraken_rest)
 (preprocess (pps ppx_sexp_conv))
 (libraries
  kraken
  core
  base64
  digestif.c
  ptime
  uri
  ocplib-json-typed
  fastrest))

(library
 (name        kraken_ws)
 (public_name kraken-ws)
 (modules kraken_ws)
 (preprocess (pps ppx_sexp_conv))
 (libraries
   kraken
   fixtypes
   ptime
   uri
   ocplib-json-typed))
