(test
 (name       test)
 (modules    test)
 (preprocess (pps ppx_jane ppx_sexp_conv))
 (libraries
   kraken-rest
   alcotest-async
   logs-async-reporter))

(executable
 (name compta)
 (modules compta)
 (public_name kraken-compta)
 (package kraken-rest)
 (preprocess (pps ppx_jane ppx_sexp_conv))
 (libraries
   logs-async-reporter
   kraken-rest
   kx-async
   kraken-ws))

(executable
 (name ws)
 (modules ws)
 (public_name kraken-ws-cli)
 (package kraken-ws)
 (preprocess (pps ppx_jane ppx_sexp_conv))
 (libraries
   core
   async
   fastws-async
   fastrest
   kraken-rest
   logs-async-reporter
   kraken-ws))
